--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-<img src="https://github.com/naive-human/naive-human.github.io/tree/master/images/IMG_2398.jpg" id="Appreciation" alt="octocat-gif" />
+<img src="https://github.com/naive-human/naive-human.github.io/tree/master/images/IMG_2398.jpg" id="Appreciation" />
 
-
+<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Naive Human Webpage!</p>
